--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,113 +1,255 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Foundation</title><link rel="stylesheet" href="./stylesheets/app.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-</head>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Foundation</title><link rel="stylesheet" href="./stylesheets/app.css">
+		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+	</head>
 
-<body>
+	<body>
 
-	<nav class="top-bar" data-topbar role="navigation">
-		<section class="top-bar-section">
-			<ul class="right">
-				<li><a href="#/about">About</a></li>
-				<li><a href="#/contact">Contact</a></li>
-			</ul>
-		</section>
-	</nav>
+<nav class="top-bar" data-topbar role="navigation">
+  <ul class="title-area">
+    <li class="name">
+      <h1><a href="#">Enterprise</a></h1>
+    </li>
+  </ul>
 
+  <section class="top-bar-section">
+    
+  </section>
+</nav>
 
-	<a class="kalachi-logo" href="#">
-		<div id="logoWrapper">
-			<img src="images/Enterprise.png" class="logo hidden-xs">
-		</div>
-	</a>
+		<!-- <div class="row">
+			<div class="small-12 medium-4 columns rentalPanel">
+				<label for="pickup-loc">Pickup Location</label>
+				<input id="pickup-loc" name="pickup-loc" placeholder="Airport, city, zip, address, attraction">
 
-	<div class="row">
-		<img src="../images/Enterprise.png">
-		<img src="../../images/Enterprise.png">
-		<img src="./images/bmw-mountains.jpg">
-	</div>
+				<label>Pickup Date & Time</label>
+			
+				<div class="small-7 columns no-padding">
+					<input id="pickup-date" name="pickup-loc" placeholder="Date">
+				</div>
 
-	<div class="row">
-		<div class="small-10 medium-4 columns rentalPanel">
-			<label for="pickup-loc">Pickup Location</label>
-			<input id="pickup-loc" name="pickup-loc" placeholder="Airport, city, zip, address, attraction">
+				<div class="small-5 columns no-right-padding">
+					<input id="pickup-time" name="pickup-time" placeholder="Time">
+				</div>
 
-			<label>Pickup Date & Time</label>
-		
-			<div class="small-7 columns no-padding">
-				<!-- <label for="pickup-date">Date</label> -->
-				<input id="pickup-date" name="pickup-loc" placeholder="Date">
-			</div>
+				<label>Return Date & Time</label>
 
-			<div class="small-5 columns no-right-padding">
-				<!-- <label for="pickup-time">Time</label> -->
-				<input id="pickup-time" name="pickup-time" placeholder="Time">
-			</div>
-
-
-			<label>Return Date & Time</label>
-
-
-			<!-- <form class="custom">
+				<form class="custom">
+					<label for="return-loc">
+						<input type="checkbox" CHECKED id="return-loc" style="display: none;">
+						<span class="custom checkbox checked"></span> Label for Checkbox
+					</label>
+				</form>
+			
 				<label for="return-loc">
-					<input type="checkbox" CHECKED id="return-loc" style="display: none;">
-					<span class="custom checkbox checked"></span> Label for Checkbox
+					<input type="checkbox" CHECKED id="return-loc">
+					<span class="custom checkbox checked">
+					</span> Return to pickup location
 				</label>
-			</form> -->
+
+				<div class="small-7 columns no-padding">
+					<input id="return-date" name="return-loc" placeholder="Date">
+				</div>
+
+				<div class="small-5 columns no-right-padding">
+					<input id="return-time" name="return-time" placeholder="Time">
+				</div>
+
+				<a href="#" id="select-car-btn" class="button">Select A Car</a>
+
+				<a href="#">Under age 25?</a>	
+			</div>
+		</div> -->
+
+
+
+
+
+
+
+		<div class="row">
+			<div class="small-12 medium-4 columns car-details-panel">
+				
+				<div class="car-type">
+					<a href="#" class="toggle-panel-tools">
+						<h4>Age 18 to 20?</h4>
+					</a>
+				</div>
+
+				<div class="pricing-details">
+					<h6>Age Restrictions</h6>
+					<p>In the U.S., renters age 18-20 can only rent from locations in New York or Michigan, or if they are U.S. government employees renting for authorized government travel. U.S. government employees age 18 or older will not incur a young-driver surcharge when renting for authorized government travel.</p>
+					<p>Reservations for ages 18-20 must be made by phone or in person, and cannot be made online.</p>
+					<hr>
+				</div>
+
+
+				<span class="price-per-day">Price per day</span>
+				<span class="price-per-day right">$34.98</span><br>
+
+				<span class="price-per-day">Total</span>
+				<span class="price-per-day right">$35.98</span><br>
+
+				<a href="#" id="select-car-btn" class="button success">Select This Car</a>
+			</div>
+
+
+		<div class="row">
+			<div class="small-12 medium-4 columns car-details-panel">
+				
+				<div class="car-type">
+					<a href="#" class="toggle-panel-tools">
+						<h2>Economy</h2>
+						<p>Kia Rio or similar</p>
+
+						<hr class="triangle-line">
+						<div class="triangle"></div>
+					</a>
+				</div>
+
+				<div class="pricing-details">
+						<span class="price-per-day">1 Day(s)</span>
+						<span class="price-per-day right">$34.98</span><br>
+
+						<span class="taxes-fees">Taxes & Fees</span>
+						<span class="taxes-fees right">3.85</span><br>
+
+						<span class="est-total">Estimated Total</span>
+						<span class="est-total right">$38.83</span>
+					<hr>
+				</div>
+
+
+				<span class="price-per-day">Price per day</span>
+				<span class="price-per-day right">$34.98</span><br>
+
+				<span class="price-per-day">Total</span>
+				<span class="price-per-day right">$35.98</span><br>
+
+				<a href="#" id="select-car-btn" class="button success">Select This Car</a>
+			</div>
+
+			<div class="small-12 medium-4 columns car-details-panel">
+				
+				<div class="car-type">
+					<a href="#" class="toggle-panel-tools">
+						<h2>Compact</h2>
+						<p>Nissan Versa Note or similar</p>
+
+						<hr class="triangle-line">
+						<div class="triangle"></div>
+					</a>
+				</div>
+
+				<div class="pricing-details">
+						<span class="price-per-day">1 Day(s)</span>
+						<span class="price-per-day right">$ 35.98</span><br>
+
+						<span class="taxes-fees">Taxes & Fees</span>
+						<span class="taxes-fees right">3.85</span><br>
+
+						<span class="est-total">Estimated Total</span>
+						<span class="est-total right">$38.83</span>
+					<hr>
+				</div>
+
+
+				<span class="price-per-day">Price per day</span>
+				<span class="price-per-day right">$34.98</span><br>
+
+				<span class="price-per-day">Total</span>
+				<span class="price-per-day right">$35.98</span><br>
+
+				<a href="#" id="select-car-btn" class="button success">Select This Car</a>
+			</div>
+
+			<div class="small-12 medium-4 columns car-details-panel">
+				
+				<div class="car-type">
+					<a href="#" class="toggle-panel-tools">
+						<h2>Intermediate</h2>
+						<p>Toyota Corolla or similar</p>
+
+						<hr class="triangle-line">
+						<div class="triangle"></div>
+					</a>
+				</div>
+
+				<div class="pricing-details">
+						<span class="price-per-day">1 Day(s)</span>
+						<span class="price-per-day right">$34.98</span><br>
+
+						<span class="taxes-fees">Taxes & Fees</span>
+						<span class="taxes-fees right">3.85</span><br>
+
+						<span class="est-total">Estimated Total</span>
+						<span class="est-total right">$38.83</span>
+					<hr>
+				</div>
+
+
+				<span class="price-per-day">Price per day</span>
+				<span class="price-per-day right">$34.98</span><br>
+
+				<span class="price-per-day">Total</span>
+				<span class="price-per-day right">$35.98</span><br>
+
+				<a href="#" id="select-car-btn" class="button success">Select This Car</a>
+			</div>
+
+			<div class="small-12 medium-4 columns car-details-panel">
+				
+				<div class="car-type">
+					<a href="#" class="toggle-panel-tools">
+						<h2>Standard</h2>
+						<p>Volkswagen Jetta or similar</p>
+
+						<hr class="triangle-line">
+						<div class="triangle"></div>
+					</a>
+				</div>
+
+				<div class="pricing-details">
+						<span class="price-per-day">1 Day(s)</span>
+						<span class="price-per-day right">$34.98</span><br>
+
+						<span class="taxes-fees">Taxes & Fees</span>
+						<span class="taxes-fees right">3.85</span><br>
+
+						<span class="est-total">Estimated Total</span>
+						<span class="est-total right">$38.83</span>
+					<hr>
+				</div>
+
+
+				<span class="price-per-day">Price per day</span>
+				<span class="price-per-day right">$34.98</span><br>
+
+				<span class="price-per-day">Total</span>
+				<span class="price-per-day right">$35.98</span><br>
+
+				<a href="#" id="select-car-btn" class="button success">Select This Car</a>
+			</div>
+		</div>
+	
+		<footer>
+			<span><a href="http://www.enterprise.com/about/privacyPolicy.html">Enterprise Rent-A-Car Privacy Policy</a>&nbsp;|&nbsp;</span>
+			<span><a href="http://www.enterprise.com/about/termsOfUse.html">Terms of Use</a>&nbsp;|&nbsp;</span>
+			<span>
+				<a href="http://preferences-mgr.truste.com/?type=enterprise&amp;affiliateId=82" target="_blank">Ad Choices</a>
+				<span class="hide-for-small-only">&nbsp;|&nbsp;</span>
+				<br class="show-for-small-only">
+			</span>
+			<span><a href="#">©&nbsp;2015&nbsp;Enterprise Rent-A-Car</a></span>  
+		</footer>
 		
-			<label for="return-loc">
-				<input type="checkbox" CHECKED id="return-loc">
-				<span class="custom checkbox checked">
-				</span> Return to pickup location
-			</label>
-
-			<div class="small-7 columns no-padding">
-				<!-- <label for="return-date">Date</label> -->
-				<input id="return-date" name="return-loc" placeholder="Date">
-			</div>
-
-			<div class="small-5 columns no-right-padding">
-				<!-- <label for="return-time">Time</label> -->
-				<input id="return-time" name="return-time" placeholder="Time">
-			</div>
-
-			<a href="#" id="select-car-btn" class="button">Select A Car</a>
-
-			<a href="#">Under age 25?</a>	
-		</div>
-	</div>
-
-	<div class="row">
-		<div class="small-12 columns">
-			<h1>Yo Foundation</h1>
-		</div>
-	</div>
-
-	<!-- <div class="row">
-		<div class="small-12 columns">
-			<h1>Yo Foundation</h1>
-			<ul>
-				<li>Sass compiling (LibSass / Compass options)</li>
-				<li>Jade templating engine (option)</li>
-				<li>BrowserSync server with live reloading</li>
-				<li>Font Awesome (option)</li>
-				<li>Gulp automation</li>
-				<li>Browserify bundling. To use:
-					<div>terminal: <code>$ npm install someModule --save</code></div>
-					<div>main.js: <code>var someModule = require('someModule');</code></div>
-				</li>
-			</ul>
-		</div>
-	</div> -->
-
-	<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
-	<script src="./node_modules/foundation-datepicker/js/foundation-datepicker.js"></script>
-	<script src="js/bundle.js"></script>
-</body>
+		<script src="js/bundle.js"></script>
+	</body>
 
 </html>
